--- a/Frontend/src/pages/credentials/ForgotPassword.scss
+++ b/Frontend/src/pages/credentials/ForgotPassword.scss
@@ -5,7 +5,7 @@
   margin: 60px auto;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(255, 255, 255, 0.03);
-  font-family: 'Noto Sans', 'Helvetica', 'Arial', sans-serif;
+  font-family: "Noto Sans", "Helvetica", "Arial", sans-serif;
   color: #e4e4e4;
 }
 
