--- a/Frontend/src/pages/ProfileCard/TabComponent/Tabs.scss
+++ b/Frontend/src/pages/ProfileCard/TabComponent/Tabs.scss
@@ -32,7 +32,8 @@
       &.active {
         color: #fff;
         background-color: #1b1e1f;
-        border-bottom: 2px solid rgb(5, 199, 11);
+        // border-bottom: 2px solid rgb(5, 199, 11);
+        border-bottom: 1px solid red;
       }
     }
   }
@@ -84,9 +85,9 @@
 }
 
 @media (max-width: 768px) {
-.css-2ulfj5-MuiTypography-root{
-  font-size: 1rem;
-}
+  .css-2ulfj5-MuiTypography-root {
+    font-size: 1rem;
+  }
 }
 .css-2ulfj5-MuiTypography-root {
   font-size: 16px;
