--- a/Frontend/src/pages/credentials/RegisterComponent.scss
+++ b/Frontend/src/pages/credentials/RegisterComponent.scss
@@ -95,7 +95,7 @@
 .go-to-signup {
   font-size: 14px;
   color: #757070;
-  margin-top: 12px;
+  margin-top: 5px;
 }
 
 .join-now {
@@ -301,6 +301,7 @@
   }
 
   .login-btn {
+    width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -352,7 +353,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  // margin-top: 20px;
 }
 
 .google-login-button {
@@ -408,11 +409,6 @@
   100% {
     transform: rotate(360deg);
   }
-}
-
-.forgot-password-container {
-  margin-top: 6px;
-  text-align: right;
 }
 
 .forgot-password-link {
@@ -488,5 +484,28 @@
   &:hover {
     background: #e50914;
     color: #fff;
+  }
+}
+
+.forgot-password-container {
+  margin-top: 6px;
+  // text-align: end;
+  margin-left: 240px;
+}
+
+.forgot-password-link {
+  color: #0a66c2;
+  font-size: 14px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.forgot-password-link:hover {
+  text-decoration: underline;
+  color: #0a66c2;
+}
+@media (max-width: 768px) {
+  .forgot-password-container {
+    margin-left: 190px;
   }
 }
