--- a/Frontend/src/pages/forum/Component/right-sidebar/right-sidebar.scss
+++ b/Frontend/src/pages/forum/Component/right-sidebar/right-sidebar.scss
@@ -118,7 +118,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-
+    margin-bottom: 1px;
     &:hover {
       color: #ff4500;
     }
@@ -128,6 +128,7 @@
     font-size: 11px;
     color: #818384;
     margin: 3px 0;
+    margin-left: 0;
   }
 }
 
